docker-compose/templates/custom-emoji-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: custom-emoji-api
  name: custom-emoji-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: custom-emoji-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cogent-labs-assignment-default: "true"
        io.kompose.service: custom-emoji-api
    spec:
      containers:
        - image: api:1.0.0
          name: custom-emoji-api
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
