docker-compose/templates/task-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: task-worker
  name: task-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: task-worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/custom-emoji-app-default: "true"
        io.kompose.service: task-worker
    spec:
      containers:
        - args:
            - celery
            - -A
            - worker.tasks
            - worker
          image: worker:1.0.0
          name: task-worker
          resources: {}
      restartPolicy: Always
status: {}
