docker-compose/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/cogent-labs-assignment-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - celery
            - -A
            - worker.tasks
            - worker
          image: worker:latest
          name: worker
          resources: {}
      restartPolicy: Always
status: {}
