docker-compose/templates/custom-emoji-app-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: custom-emoji-app-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/custom-emoji-app-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/custom-emoji-app-default: "true"
